test/e2e/fixtures/mapping-safe-regex/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapping-safe-regex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mapping-safe-regex
  template:
    metadata:
      labels:
        app: mapping-safe-regex
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: mapping-safe-regex
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mapping-safe-regex
spec:
  selector:
    app: mapping-safe-regex
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: mapping-safe-regex
spec:
  ambassador_id: [(env('SLOT'))]
  prefix: /mapping-safe-regex/
  prefix_regex: true
  host: "[a-zA-Z].*"
  host_regex: true
  regex_headers:
    X-Foo: "^[a-z].*"
  service: http://mapping-safe-regex:8080
