test/e2e/fixtures/mapping-safe-regex/queries.json
[
  {
    "url": "/mapping-safe-regex/",
    "method": "GET",
    "headers": {
      "X-Foo": "hello"
    }
  },
  {
    "url": "/need-normalization/../mapping-safe-regex/",
    "method": "GET",
    "headers": {
      "X-Foo": "hello"
    }
  },
  {
    "url": "/mapping-safe-regex/",
    "method": "GET"
  },
  {
    "url": "/need-normalization/../mapping-safe-regex/",
    "method": "GET"
  }
]
